--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,5 +11,4 @@ jobs:
     - uses: actions/checkout@v1
     - uses: docker://daverichmond/fpga-quartus
       with:
-        entrypoint: quartus_sh
-        args: --flow compile NES
+        args: echo "hello world"
