--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,4 +11,4 @@ jobs:
     - uses: actions/checkout@v1
     - uses: docker://daverichmond/fpga-quartus
       with:
-        args: echo "hello world"
+        args: quartus_sh --flow compile NES
