attempt to squelch terminal warnings

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,4 +11,4 @@ jobs:
     - uses: actions/checkout@v1
     - uses: docker://daverichmond/fpga-quartus
       with:
-        args: quartus_sh --flow compile NES
+        args: xterm -e "quartus_sh --flow compile NES"
