--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,15 +2,10 @@ version: 2
 jobs:
   build:
     docker:
-      - image: debian:stretch
-
+      - image: chriz2600/quartus-lite
     steps:
       - checkout
 
       - run:
-          name: Greeting
-          command: echo Hello, world.
-
-      - run:
-          name: Print the Current Time
-          command: date
+          name: build
+          command: /opt/intelFPGA_lite/18.1/quartus/bin//quartus_sh --flow compile NES
